<resources>
    <string name="app_name">SocialApp</string>
    <string name="input_movies">Введите название фильма</string>
    <string name="input_category">Введите название категории</string>
    <string name="input_movies_hint">Название фильма английском языке</string>
    <string name="input_movies_year">Введите год выпуска</string>
    <string name="search">Поиск</string>
    <string name="adding">Добавить</string>
    <string name="add">Добавить в подборку</string>
    <string name="add_category">Добавить категорию</string>
    <string name="add_movies">Добавить фильм</string>
    <string name="text_category">Вы еще не добавили ни одной категории, нажмите на кнопку добавить</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="back">Назад</string>
    <string name="movies">Фильмы</string>
    <string name="serials">Сериалы</string>
    <string name="popular_movies">Популярные фильмы</string>
    <string name="highest_rating_movies">Фильмы с самым большим рейтингом</string>
    <string name="description">Description:</string>
    <string name="year">Year:</string>
    <string name="rated">Rated:</string>
    <string name="released">Released:</string>
    <string name="runtime">Runtime:</string>
    <string name="genre">Genre:</string>
    <string name="director">Director:</string>
    <string name="writer">Writer:</string>
    <string name="actors">Actors:</string>
    <string name="rating">Rating:</string>
    <string name="language">Language:</string>
    <string name="country">Country:</string>
    <string name="awards">Awards:</string>
    <string name="title">Title</string>
</resources>