<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mtvInputMoviesName"
            style="@style/TitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/input_movies"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMovie"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/input_movies_hint"
            app:layout_constraintTop_toBottomOf="@+id/mtvInputMoviesName">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbtnSearchMovie"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/search"
            android:textAllCaps="false"
            app:icon="@drawable/ic_search_movie_24"
            app:iconGravity="start"
            app:iconPadding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilMovie" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/mcvMoviesInform"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintTop_toBottomOf="@+id/mbtnSearchMovie">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/sivMoviePoster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvMoviesTitle"
                    style="@style/TitleTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/sivMoviePoster" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvTitleDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center"
                    android:text="@string/description"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/mtvMoviesTitle" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/mtvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/mtvTitleDescription" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mbtnAddInCollection"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:visibility="gone"
                    android:textAllCaps="false"
                    android:text="@string/adding"
                    app:icon="@drawable/ic_favorite_border_24"
                    app:layout_constraintTop_toBottomOf="@+id/mtvDescription"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>